# signature-management-backend

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  docker_compose_run.sh  mkdocs.yaml  mkdocs.yml  pyproject.toml  pytest.sh
.github/workflows/: pipeline.yaml
app/: .env  config_app.py  configuration.py  main.py  test_config_app.py  test_main.py
app/application/use-cases/: test_use_cases.py  use_cases.py
app/application/use_cases/: test_use_cases.py  use_cases.py
app/infra/event_bus/: Dockerfile  configuration.old  listen_queue.py  listen_queues.py  read_queues.py  start_listen_queue.sh
app/infra/rabbitmq/: .env  Dockerfile  config_rabbit.sh  definitions.json  init.sh  rabbitmq.conf
application/use-cases/: use_cases.py
docs/: index.md
docs/api/: use_cases.md
infra/: docker-compose.yaml
infra/rabbitmq/: .env
