[tool.poetry]
name = "signature-management-backend"
version = "0.1.0"
description = ""
authors = ["ricardoferreira68 <jrsf68@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "signature_management_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.8"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . --check --diff && isort . --check --diff"
pre_test = "task lint"
test = "pytest --ff -x -vv -s --capture=no --cov"
post_test = "coverage html"